Fixed modal size issues on mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -33,8 +33,12 @@ body { margin: 0; font-family: "Helvetica Neue", sans-serif; }
 
 
 @media only screen and (max-width: 600px) {
-  .mat-dialog-actions {
-      flex-wrap: nowrap !important;
+  .mat-dialog-actions { 
+    justify-content: end;
+     
+    button {
+      margin-bottom: 5px;
+    }
   }
 
 }
